--- a/src/style/login.css
+++ b/src/style/login.css
@@ -18,6 +18,7 @@
   -fx-border-color: white;
   -fx-border-width: 1px;
   -fx-min-width: 200;
+  -fx-border-radius: 4;
 }
 
 #btnLogin {
@@ -25,6 +26,7 @@
   -fx-text-fill: white;
   -fx-border-color: white;
   -fx-border-width: 1px;
+  -fx-border-radius: 4;
 }
 
 #welcome {
